Profile and Business profile endpoints, shrine configuration for file uploads, prevent auto signing in on registration
