# app/models/profile.rb
@@ -1,3 +1,6 @@
 class Profile < ApplicationRecord
   belongs_to :user
+
+  include ImageUploader[:file]
+  include ImageUploader[:avatar]
 end
